# serializer version: 1
# name: test_setup
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Timer',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_setup.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Timer',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
